# WarGamer

./: CMakeLists.txt  main.cpp  player.h  status.txt
test/: CMakeLists.txt  test.cpp
